# MyDiscord

./: .gitignore  CMakeLists.txt  app  auth-client.c  auth.c  discord_channels.c  discord_chat.c  main.c  messNreact.c  readme  server  server.c  serveur.c
include/: alert_dialog_utils.h  app_auth.h  app_chat.h  app_context.h  auth.h  chat.h  server_auth.h  server_chat.h
obso/: auth.c  authinterface.c
src/: alert_dialog_utils.c  app_auth.c  app_chat.c  app_main.c  auth.c  chat.c  main.c  server.c  server_auth.c  server_chat.c
